# gardswag

./: .gitignore  Cargo.nix  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/gardswag/: Cargo.toml
crates/gardswag-annotated/: Cargo.toml
crates/gardswag-annotated/src/: functor.rs  lib.rs  subst.rs
crates/gardswag-core/: Cargo.toml
crates/gardswag-core/src/: lib.rs  ty.rs  varstack.rs
crates/gardswag-infer-cgen/: Cargo.toml
crates/gardswag-infer-cgen/src/: lib.rs  pattern.rs
crates/gardswag-interner/: Cargo.toml
crates/gardswag-interner/src/: lib.rs
crates/gardswag-llvm/: Cargo.toml  build.rs
crates/gardswag-llvm/src/: gdsllvm.cxx  gdsllvm.hpp  lib.rs
crates/gardswag-subst/: Cargo.toml
crates/gardswag-subst/src/: lib.rs
crates/gardswag-syntax/: Cargo.toml
crates/gardswag-syntax/proptest-regressions/: lib.txt
crates/gardswag-syntax/src/: annot.rs  block.rs  lex.rs  lib.rs  offset.rs  tests.rs
crates/gardswag-syntax/src/snapshots/: gardswag_syntax__lex__tests__lex_let.snap  gardswag_syntax__lex__tests__lex_loop.snap  gardswag_syntax__lex__tests__lex_while.snap  gardswag_syntax__tests__block_term.snap  gardswag_syntax__tests__complex_fstr.snap  gardswag_syntax__tests__ctrl_match.snap  gardswag_syntax__tests__fibo.snap  gardswag_syntax__tests__fibo_simpler.snap  gardswag_syntax__tests__hello_world.snap  gardswag_syntax__tests__op_update.snap  gardswag_syntax__tests__pipe.snap  gardswag_syntax__tests__record.snap  gardswag_syntax__tests__record_inherit.snap  gardswag_syntax__tests__std_fixpoint.snap
crates/gardswag-typesys/: Cargo.toml  README.md
crates/gardswag-typesys/src/: collect.rs  constraint.rs  lib.rs  substitutable.rs  ty.rs
crates/gardswag-tysy-collect/: Cargo.toml
crates/gardswag-tysy-collect/src/: lib.rs
crates/gardswag-varstack/: Cargo.toml
crates/gardswag-varstack/src/: lib.rs
crates/gardswag/proptest-regressions/: main.txt  tests.txt
crates/gardswag/src/: bytecode.rs  infer.rs  interp.rs  interp_ast.rs  lib.rs  main.rs  tests.rs
crates/gardswag/src/infer/: mod.rs  pattern.rs
crates/gardswag/src/interp_rwt/: mod.rs  run.rs
crates/gardswag/src/snapshots/: gardswag__tests__check_regression0.snap  gardswag__tests__chk_fibo.snap  gardswag__tests__chk_hello.snap  gardswag__tests__chk_implicit_restr.snap  gardswag__tests__error_int_update.snap  gardswag__tests__run_call_blti-2.snap  gardswag__tests__run_call_blti.snap  gardswag__tests__run_ctrl_match-2.snap  gardswag__tests__run_ctrl_match.snap  gardswag__tests__run_fibo-2.snap  gardswag__tests__run_fibo.snap  gardswag__tests__run_fibo0.snap  gardswag__tests__run_fibo1.snap  gardswag__tests__run_fix-2.snap  gardswag__tests__run_fix.snap  gardswag__tests__run_id-2.snap  gardswag__tests__run_id.snap  gardswag__tests__run_update-2.snap  gardswag__tests__run_update.snap  gardswag__tests__treesum_2pown.snap
crates/string-interner/: README.md
docs/: language_gardswag.txt
docs/HVM-without-superposition/: DE_BUIJN_IDXs.md  README.md
docs/examples/: fibo.gds  hello.gds  implicit-restr.gds  option.gds  thread00.gds  variant.gds
docs/nix-overlay-problem/: broken.gds  links  working.gds
docs/perf/: treesum-2^n.gds
