[package]
name = "gardswag-infer-cgen"
description = "type constraint inference engine for gardswag (populates CollectContext)"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
gardswag-syntax.path = "../gardswag-syntax"
gardswag-typesys.path = "../gardswag-typesys"
gardswag-varstack.path = "../gardswag-varstack"
serde = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dependencies.gardswag-subst]
path = "../gardswag-subst"
features = ["gardswag-varstack"]
