[package]
name = "gardswag-syntax"
description = "syntax tree and parser for gardswag"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
thiserror = "1.0"
unicode-normalization = "0.1"
unicode-xid = "0.2"
gardswag-typesys.path = "../gardswag-typesys"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
insta = "1.14"
proptest = "1.0"
