[package]
name = "gardswag-syntax"
description = "syntax tree and parser for gardswag"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
gardswag-annotated.path = "../gardswag-annotated"
gardswag-interner.path = "../gardswag-interner"
gardswag-subst.path = "../gardswag-subst"
thiserror = "1.0"
unicode-ident = "1.0"
unicode-normalization = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]

[dev-dependencies.insta]
version = "1.14"
features = ["yaml"]

[dev-dependencies.proptest]
version = "1.0"
default-features = false
features = ["break-dead-code", "std"]
