[package]
name = "gardswag-typesys"
description = "Hindley Milner type system implementation for gardswag"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
gardswag-annotated.path = "../gardswag-annotated"
gardswag-subst.path = "../gardswag-subst"
gardswag-varstack.path = "../gardswag-varstack"
thiserror = "1.0"
tracing = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]
