[package]
name = "gardswag-typesys"
description = "Hindley Milner type system implementation for gardswag"
version = "0.1.0"
edition = "2021"
license = "CC BY-NC-SA 4.0"

[dependencies]
gardswag-subst.path = "../gardswag-subst"
thiserror = "1.0"
tracing = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]
