[package]
name = "gardswag"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
gardswag-syntax.path = "../gardswag-syntax"
gardswag-typesys.path = "../gardswag-typesys"
gardswag-varstack.path = "../gardswag-varstack"
serde = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
tracing = "0.1"

[dependencies.clap]
version = "3.1"
features = ["derive"]

[dependencies.string-interner]
version = "0.14"
path = "../string-interner"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dev-dependencies]
insta = "1.14"
