[package]
name = "gardswag"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
gardswag-core.path = "../gardswag-core"
gardswag-syntax.path = "../gardswag-syntax"
gardswag-tysy-collect.path = "../gardswag-tysy-collect"
gardswag-typesys.path = "../gardswag-typesys"
gardswag-varstack.path = "../gardswag-varstack"
serde = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
tracing = "0.1"

[dependencies.clap]
version = "3.1"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dev-dependencies]
insta = "1.14"
proptest = "1.0"
