[package]
name = "gardswag"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 AND CC BY-NC-SA 4.0"

[dependencies]
anyhow = "1.0"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
gardswag-infer-cgen.path = "../gardswag-infer-cgen"
gardswag-syntax.path = "../gardswag-syntax"
gardswag-typesys.path = "../gardswag-typesys"
serde = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
varstack = "0.1"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dev-dependencies]
insta = "1.21"

[dev-dependencies.proptest]
version = "1.0"
default-features = false
features = ["break-dead-code", "std"]
